добавление причины ожидания авто-раунда в статус
